@@ -1,25 +1,12 @@
-from Products.CMFCore import CMFCorePermissions
-from Products.CMFCore.CMFCorePermissions import setDefaultRoles
+""" Backward compatibility;  see Products.CMFCollector.permissions
 
-# Gathering Event Related Permissions into one place
-ViewCollector = CMFCorePermissions.View
-AddCollector = 'Add portal collector'
-ManageCollector = 'Add portal collector'
-AddCollectorIssue = 'Add collector issue'
-AddCollectorIssueFollowup = 'Add collector issue comment'
-EditCollectorIssue = 'Edit collector issue'
-SupportIssue = 'Support collector issue'
+$Id$
+"""
 
-# Set up default roles for permissions
-setDefaultRoles(AddCollector,
-                ('Manager', 'Owner'))
-setDefaultRoles(ManageCollector,
-                ('Manager', 'Owner'))
-setDefaultRoles(AddCollectorIssue,
-                ('Anonymous', 'Manager', 'Reviewer', 'Owner'))
-setDefaultRoles(AddCollectorIssueFollowup,
-                ('Manager', 'Reviewer', 'Owner'))
-setDefaultRoles(EditCollectorIssue,
-                ('Manager', 'Reviewer'))
-setDefaultRoles(SupportIssue,
-                ('Manager', 'Reviewer'))
+from permissions import *
+
+from warnings import warn
+
+warn( "The module, 'Products.CMFCollector.CollectorPermissions' is a "
+      "deprecated compatiblity alias for 'Products.CMFCollector.permissions'; "
+      "please use the new module instead.", DeprecationWarning)
